--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -140,19 +140,32 @@ $font-secondary: 'Roboto', sans-serif;
 
 /* :::::::::::::: 04 * GRIT_SET Varriables */
 
-$sx-res: 479px;
-$sm-res: 767px;
-$md-res: 992px;
-$lg-res: 1200px;
-$xl-res: 1600px;
-$xxl-res: 1920px;
+$xs-res: 0;
+$sm-res: 576px;
+$md-res: 768px;
+$lg-res: 992px;
+$xl-res: 1200px;
+$xxl-res: 1600px;
+$xxxl-res: 1920px;
 
-$sx: 479;
-$sm: 767;
-$md: 992;
-$lg: 1200;
-$xl: 1600;
-$xxl: 1920;
+$breakpoints: ( 
+  xs: $xs-res,
+  sm: $sm-res,
+  md: $md-res,
+  lg: $lg-res,
+  xl: $xl-res,
+  xxl: $xxl-res,
+  xxxl: $xxxl-res,
+);
+
+
+$xs: 0;
+$sm: 576;
+$md: 768;
+$lg: 992;
+$xl: 1200;
+$xxl: 1600;
+$xxxl: 1920;
 
 $c-gap: 140;
 
